0025373: Visualization, AIS_MultipleConnectedInteractive - transformation persistence flags are ignored for connected objects

Provide method AIS_MultipleConnectedInteractive::Connect() taking transformation persistence flags.
Copy transformation persistence flags from original objects when called Connect() without extra arguments.